--- a/stateful/stateful-auth-api/src/main/resources/application.yml
+++ b/stateful/stateful-auth-api/src/main/resources/application.yml
@@ -1,6 +1,24 @@
 spring:
   application:
     name: stateful-auth-api
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:auth-db}
+    username: ${DB_USER:postgres}
+    password: ${DB_PASSWORD:postgres}
+    initialization-mode: always
+    initialize: true
+    continue-on-error: true
+    platform: postgresql
+    maxActive: 3
+
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+      format-sql: true
+    show-sql: true
+    properties:
+      dialect: org.hibernate.dialect.PostgreSQLDialect
 
 server:
   port: ${PORT:8082}
