--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,7 @@ services:
       DB_NAME: auth-db
       DB_USER: postgres
       DB_PASSWORD: postgres
+      JWT_SECRET_KEY: Y3Vyc28tYXV0ZW50aWNhY2FvLXN0YXRlZnVsLXN0YXRlbGVzcy1taWNyb3NzZXJ2aWNvcw==
     networks:
       - auth-bridge
   stateless-any-api:
@@ -96,6 +97,7 @@ services:
       - "8081:8081"
     environment:
       PORT: 8081
+      JWT_SECRET_KEY: Y3Vyc28tYXV0ZW50aWNhY2FvLXN0YXRlZnVsLXN0YXRlbGVzcy1taWNyb3NzZXJ2aWNvcw==
     networks:
       - auth-bridge
   stateful-auth-api:
@@ -112,6 +114,8 @@ services:
       DB_NAME: auth-db
       DB_USER: postgres
       DB_PASSWORD: postgres
+      REDIS_HOST: token-redis
+      REDIS_PORT: 6379
     networks:
       - auth-bridge
   stateful-any-api:
@@ -121,6 +125,7 @@ services:
       - "8083:8083"
     environment:
       PORT: 8083
+      STATEFUL_AUTH_BASE_URL: http://stateful-auth-api:8082
     networks:
       - auth-bridge
 
